outputs/2023-07-02/06-26-47/train.log
[2023-07-02 06:26:47,761][mylib.train][INFO] - Instantiating datamodule <mylib.data.cifar_datamodule.CIFARDataModule>
[2023-07-02 06:26:47,764][mylib.utils.utils][ERROR] - 
Traceback (most recent call last):
  File "/workspace/.pyenv_mirror/user/current/lib/python3.11/site-packages/hydra/_internal/utils.py", line 644, in _locate
    obj = getattr(obj, part)
          ^^^^^^^^^^^^^^^^^^
AttributeError: module 'mylib.data' has no attribute 'cifar_datamodule'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/workspace/.pyenv_mirror/user/current/lib/python3.11/site-packages/hydra/_internal/utils.py", line 650, in _locate
    obj = import_module(mod)
          ^^^^^^^^^^^^^^^^^^
  File "/home/gitpod/.pyenv/versions/3.11.1/lib/python3.11/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1206, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1178, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1149, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/workspace/EMLO/mylib/data/cifar_datamodule.py", line 6
    import torchvision.datasets import CIFAR10
                                ^^^^^^
SyntaxError: invalid syntax

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/workspace/.pyenv_mirror/user/current/lib/python3.11/site-packages/hydra/_internal/instantiate/_instantiate2.py", line 134, in _resolve_target
    target = _locate(target)
             ^^^^^^^^^^^^^^^
  File "/workspace/.pyenv_mirror/user/current/lib/python3.11/site-packages/hydra/_internal/utils.py", line 658, in _locate
    raise ImportError(
ImportError: Error loading 'mylib.data.cifar_datamodule.CIFARDataModule':
SyntaxError('invalid syntax', ('/workspace/EMLO/mylib/data/cifar_datamodule.py', 6, 29, 'import torchvision.datasets import CIFAR10\n', 6, 35))

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/workspace/EMLO/mylib/utils/utils.py", line 65, in wrap
    metric_dict, object_dict = task_func(cfg=cfg)
                               ^^^^^^^^^^^^^^^^^^
  File "/workspace/EMLO/mylib/train.py", line 20, in train
    datamodule: LightningDataModule = hydra.utils.instantiate(cfg.data)
                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/workspace/.pyenv_mirror/user/current/lib/python3.11/site-packages/hydra/_internal/instantiate/_instantiate2.py", line 226, in instantiate
    return instantiate_node(
           ^^^^^^^^^^^^^^^^^
  File "/workspace/.pyenv_mirror/user/current/lib/python3.11/site-packages/hydra/_internal/instantiate/_instantiate2.py", line 333, in instantiate_node
    _target_ = _resolve_target(node.get(_Keys.TARGET), full_key)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/workspace/.pyenv_mirror/user/current/lib/python3.11/site-packages/hydra/_internal/instantiate/_instantiate2.py", line 139, in _resolve_target
    raise InstantiationException(msg) from e
hydra.errors.InstantiationException: Error locating target 'mylib.data.cifar_datamodule.CIFARDataModule', set env var HYDRA_FULL_ERROR=1 to see chained exception.
full_key: data
[2023-07-02 06:26:47,767][mylib.utils.utils][INFO] - Output dir: /workspace/EMLO/outputs/2023-07-02/06-26-47
